--- a/kshcherbatov/DebugInfo/CMakeLists.txt
+++ b/kshcherbatov/DebugInfo/CMakeLists.txt
@@ -3,5 +3,5 @@ project(DebugInfo)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp logger.cpp logger.h)
+set(SOURCE_FILES main.cpp logger.cpp)
 add_executable(DebugInfo ${SOURCE_FILES})
