Added improved version of logger and maybe working mapped file

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -1,11 +1,11 @@
 MAKE_DIR := $(PWD)/out
-DIRS := logger hash
+DIRS := logger hash chunk_manager mf
 BUILDDIRS := $(DIRS:%=build-%)
 INSTALLDIRS := $(DIRS:%=install-%)
 CLEANDIRS := $(DIRS:%=clean-%)
 TESTDIRS := $(DIRS:%=test-%)
 
-CFLAGS := -DDEBUG_LOG
+CFLAGS := -DDEBUG_LOG -DDEBUG_STDERRLOG -g
 export CFLAGS MAKE_DIR
 
 all: $(BUILDDIRS)
