Added test-mf clean to Makefile

--- a/dkopyrin/mapped_file/mf/Makefile
+++ b/dkopyrin/mapped_file/mf/Makefile
@@ -5,4 +5,4 @@ test:
 	$(CC) $(CFLAGS) -o $(MAKE_DIR)/test-mf test.c $(MAKE_DIR)/*.o
 
 clean:
-	rm -f $(MAKE_DIR)/test-log $(MAKE_DIR)/*.o
+	rm -f $(MAKE_DIR)/test-mf $(MAKE_DIR)/*.o
