Added first version of mapped_file

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -5,7 +5,7 @@ INSTALLDIRS := $(DIRS:%=install-%)
 CLEANDIRS := $(DIRS:%=clean-%)
 TESTDIRS := $(DIRS:%=test-%)
 
-CFLAGS := -DDEBUG_LOG -DDEBUG_STDERRLOG -g
+CFLAGS += -DDEBUG_STDERRLOG -g
 export CFLAGS MAKE_DIR
 
 all: make_dir_init $(BUILDDIRS)
