--- a/enikitenko/mapped_file/CMakeLists.txt
+++ b/enikitenko/mapped_file/CMakeLists.txt
@@ -9,6 +9,7 @@ list (APPEND SOURCES
 
 set (CMAKE_C_FLAGS "-Ofast")
 set (CMAKE_SHARED_LINKER_FLAGS "-Ofast")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY out)
 
 if (WITH_LOGGER)
 	list (APPEND SOURCES
