Added build flags

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -9,6 +9,8 @@ CFLAGS += -DDEBUG_STDERRLOG -g
 export CFLAGS MAKE_DIR
 
 all: make_dir_init $(BUILDDIRS)
+	ar rcs $(MAKE_DIR)/libmappedfile.a $(MAKE_DIR)/*.o
+	rm -rf *.o
 
 make_dir_init:
 	mkdir -p $(MAKE_DIR)
@@ -18,7 +20,7 @@ $(BUILDDIRS):
 	$(MAKE) -C $(@:build-%=%)
 
 clean: make_dir_init $(CLEANDIRS)
-	rm -rf *.o
+	rm -rf *.a
 $(CLEANDIRS):
 	$(MAKE) -C $(@:clean-%=%) clean
 
