Fixed wrong whitespace behaviour in tester and Makefiles

--- a/dkopyrin/mapped_file/chunk_manager/Makefile
+++ b/dkopyrin/mapped_file/chunk_manager/Makefile
@@ -1,6 +1,8 @@
+IFS=$(echo -en "\n\b")
+
 all:
-	$(CC) $(CFLAGS) -Wall -c chunk.c -o $(MAKE_DIR)/chunk.o
-	$(CC) $(CFLAGS) -Wall -c chunk_manager.c -o $(MAKE_DIR)/chunk_manager.o
+	$(CC) $(CFLAGS) -Wall -c chunk.c -o "$(MAKE_DIR)/chunk.o"
+	$(CC) $(CFLAGS) -Wall -c chunk_manager.c -o "$(MAKE_DIR)/chunk_manager.o"
 
 test:
 
