--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -9,17 +9,17 @@ CFLAGS += -DDEBUG_STDERRLOG -g
 export CFLAGS MAKE_DIR
 
 all: make_dir_init $(BUILDDIRS)
-	ar rcs $(PWD)/out/libmappedfile.a $(PWD)/out/*.o
+	ar rcs "$(PWD)/out/libmappedfile.a" "$(PWD)/out"/*.o
 
 make_dir_init:
-	mkdir -p $(MAKE_DIR)
+	mkdir -p "$(MAKE_DIR)"
 
 $(DIRS): $(BUILDDIRS)
 $(BUILDDIRS):
 	$(MAKE) -C $(@:build-%=%)
 
 clean: make_dir_init $(CLEANDIRS)
-	rm -rf *.o
+	rm -rf *.o "$(PWD)/out/libmappedfile.a"
 $(CLEANDIRS):
 	$(MAKE) -C $(@:clean-%=%) clean
 
