--- a/dkopyrin/mapped_file/hash/Makefile
+++ b/dkopyrin/mapped_file/hash/Makefile
@@ -5,4 +5,4 @@ test:
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test-hash" test.c "$(MAKE_DIR)/hash_table.o" "$(MAKE_DIR)/log.o" "$(MAKE_DIR)/log_ring_buf.o"
 
 clean:
-	rm -f "$(MAKE_DIR)/test-hash" "$(MAKE_DIR)/*.o"
+	rm -f "$(MAKE_DIR)/test-hash" "$(MAKE_DIR)/"*.o
