Changing to new header & fix unbound reads & mapping
Now my code is compiliant with the new version of the header and pass the denisk-like tests on read/mapping. I have written my own functional test too.
Some issues with the iterator step size were fixed there.
I'm sorry that there is more than one changes in one commit :(

--- a/aneganov/mapped_file/Makefile
+++ b/aneganov/mapped_file/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS = libmf unittests tests
+SUBDIRS = libmf unittests test
 
 all:
 	@set -e; \
@@ -6,5 +6,5 @@ all:
 	cp ./libmf/libmf.a ./out/libmappedfile.a
 
 clean:
-	@for d in $(SUBDIRS); do $(MAKE) -C $$d clean ; done;
+	@for d in $(SUBDIRS); do $(MAKE) -C $$d clean ; done
 	rm ./out/*
