--- a/aneganov/mapped_file/libmf/Makefile
+++ b/aneganov/mapped_file/libmf/Makefile
@@ -1,7 +1,8 @@
 include ../Makefile.inc
 
+CFLAGS += -I../../../include
 LIBMF = libmf.a
-LIBOBJS = hashtable.o mf_malloc.o log.o chunk_manager.o mf_iterator.o __mapped_file.o mapped_file.o
+LIBOBJS = hashtable.o mf_malloc.o log.o chunk_manager.o mf_iterator.o mapped_file.o
 
 ifeq (.depend,$(wildcard .depend))
 include .depend
