--- a/kshcherbatov/BFL/CMakeLists.txt
+++ b/kshcherbatov/BFL/CMakeLists.txt
@@ -15,5 +15,5 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-variadic-macros -ansi -pedantic -D__STDC_FORMAT_MACROS -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D_GNU_SOURCE -D_REENTRANT -Wall -Wextra -Wwrite-strings -Winit-self -Wcast-align -Wcast-qual -Wpointer-arith -Wstrict-aliasing -Wformat=2 -Wuninitialized -Wmissing-declarations -Woverloaded-virtual -Wnon-virtual-dtor -Wctor-dtor-privacy -Wno-long-long")
 endif()
 
-set(SOURCE_FILES main.cpp mapped_file.cpp logger.cpp hash_table.cpp mapped_file.cpp)
+set(SOURCE_FILES main.cpp mapped_file.cpp logger.cpp hash_table.cpp mapped_file.cpp chunk_manager.cpp chunk_manager.h)
 add_executable(BFL ${SOURCE_FILES})
