Updated test (split one test to 2 performance tests) and fixed (again) double free error in mf_unmap

--- a/enikitenko/mapped_file/CMakeLists.txt
+++ b/enikitenko/mapped_file/CMakeLists.txt
@@ -20,6 +20,7 @@ if (WITH_LOGGER)
 endif (WITH_LOGGER)
 
 add_library (mappedfile ${SOURCES})
+include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
 if (WITH_LOGGER)
 	target_link_libraries (testapp dl pthread)
