Fixed not deleted files. BUG: CMake files are not deleted yet. Will make sandbox directory

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -20,7 +20,7 @@ $(BUILDDIRS):
 
 clean: make_dir_init $(CLEANDIRS)
 	rm -rf "$(PWD)/out/"*.o
-	rm "$(PWD)/out/libmappedfile.a"
+	rm -rf "$(PWD)/out/libmappedfile.a"
 
 $(CLEANDIRS):
 	$(MAKE) -C $(@:clean-%=%) clean
