Added support for nester & API

--- a/aivanov/mapped_file/CMakeLists.txt
+++ b/aivanov/mapped_file/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 project (mapped_file)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
+set (CMAKE_C_FLAGS "-Ofast")
+include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../../include)
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "out")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "out")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "out")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror")
 
