Made a slight improvement in speed by flag switching and uniting API and internal API

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -1,11 +1,11 @@
 MAKE_DIR := $(PWD)/out
-DIRS := logger hash chunk_manager mf mapped_file
+DIRS := logger hash chunk_manager mapped_file
 BUILDDIRS := $(DIRS:%=build-%)
 INSTALLDIRS := $(DIRS:%=install-%)
 CLEANDIRS := $(DIRS:%=clean-%)
 TESTDIRS := $(DIRS:%=test-%)
 
-CFLAGS += -DDEBUG_STDERRLOG -g
+CFLAGS += -Ofast
 export CFLAGS MAKE_DIR
 
 all: make_dir_init $(BUILDDIRS)
