--- a/dkopyrin/mapped_file/test/Makefile
+++ b/dkopyrin/mapped_file/test/Makefile
@@ -1,8 +1,8 @@
 all:
 
 test:
-	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test-mf" test.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
-	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_map" test1.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
+	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test-mf" test_simple.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
+	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_map" test_simple_map.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ht" test_ht.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ladder" test_ladder.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_stairs" test_stairs.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
