Made optimization that updating chunk with the same offset in rbtree is made at O(1)

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -5,7 +5,11 @@ INSTALLDIRS := $(DIRS:%=install-%)
 CLEANDIRS := $(DIRS:%=clean-%)
 TESTDIRS := $(DIRS:%=test-%)
 
-CFLAGS += -Ofast -s -DNDEBUG  #-g -DDEBUG_LOG -DDEBUG_STDERRLOG #-DMEMORY_DEBUG
+ifdef DEBUG
+CFLAGS += -g -DDEBUG_LOG -DDEBUG_STDERRLOG #-DMEMORY_DEBUG
+else
+CFLAGS += -Ofast -s -DNDEBUG
+endif
 export CFLAGS MAKE_DIR
 
 all: make_dir_init $(BUILDDIRS)
