--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -6,9 +6,9 @@ CLEANDIRS := $(DIRS:%=clean-%)
 TESTDIRS := $(DIRS:%=test-%)
 
 ifdef DEBUG
-CFLAGS += -g -DDEBUG_LOG -DDEBUG_STDERRLOG #-DMEMORY_DEBUG
+CFLAGS += -g -DDEBUG_LOG -DDEBUG_STDERRLOG -DMEMORY_DEBUG
 else
-CFLAGS += -g
+CFLAGS += -Ofast -s -DNDEBUG
 endif
 export CFLAGS MAKE_DIR
 
