Added new tests for parallel mapped file

--- a/dkopyrin/par_mapped_file/test/Makefile
+++ b/dkopyrin/par_mapped_file/test/Makefile
@@ -3,10 +3,11 @@ all:
 test:
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test-mf" test_simple.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_map" test_simple_map.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
-	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ht" test_ht.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
+	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ht_eq" test_ht_eq.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
+	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ht_par" test_ht_par.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_ladder" test_ladder.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_stairs" test_stairs.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 	$(CC) $(CFLAGS) -o "$(MAKE_DIR)/test_pyramid" test_pyramid.c "$(MAKE_DIR)/libmappedfile.a" -I../../../include/
 
 clean:
-	rm -f "$(MAKE_DIR)/test-mf" "$(MAKE_DIR)/test_map" "$(MAKE_DIR)/test_ladder" "$(MAKE_DIR)/test_stairs" "$(MAKE_DIR)/test_pyramid" "$(MAKE_DIR)/test_ht" "$(MAKE_DIR)/*.o"
+	rm -f "$(MAKE_DIR)/test-mf" "$(MAKE_DIR)/test_map" "$(MAKE_DIR)/test_ladder" "$(MAKE_DIR)/test_stairs" "$(MAKE_DIR)/test_pyramid" "$(MAKE_DIR)/test_ht_eq" "$(MAKE_DIR)/test_ht_par" "$(MAKE_DIR)/*.o"
