Added support for icc in tester. Fixed double entry error

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -8,7 +8,7 @@ TESTDIRS := $(DIRS:%=test-%)
 ifdef DEBUG
 CFLAGS += -g -DDEBUG_LOG -DDEBUG_STDERRLOG -DMEMORY_DEBUG
 else
-CFLAGS += -Ofast -s -DNDEBUG
+CFLAGS += -Ofast -s -DNDEBUG -march=native
 endif
 export CFLAGS MAKE_DIR
 
