Make sorce files and makefile compatible with Intel compiler

--- a/aneganov/mapped_file/Makefile.inc
+++ b/aneganov/mapped_file/Makefile.inc
@@ -6,3 +6,7 @@ CFLAGS += $(if $(LOG), -DLOG_ON,)
 CFLAGS += $(if $(PROF), -fprofile-arcs -ftest-coverage,)
 CFLAGS += $(if $(ASAN), -fsanitize=address -fno-omit-frame-pointer,)
 LDFLAGS += $(if $(ASAN), -lasan,)
+
+ifeq ($(CC),icc)
+	LDFLAGS += -lirc
+endif
