Fixed wrong optimization flags and removed obsolete parallel tests

--- a/dkopyrin/mapped_file/Makefile
+++ b/dkopyrin/mapped_file/Makefile
@@ -8,7 +8,7 @@ TESTDIRS := $(DIRS:%=test-%)
 ifdef DEBUG
 CFLAGS +=  -DDEBUG_LOG -DDEBUG_STDERRLOG -DMEMORY_DEBUG
 else
-CFLAGS += -g -s -DNDEBUG
+CFLAGS += -O3 -s -DNDEBUG
 endif
 export CFLAGS MAKE_DIR
 
