--- a/dkopyrin/par_mapped_file/chunk_manager/Makefile
+++ b/dkopyrin/par_mapped_file/chunk_manager/Makefile
@@ -1,7 +1,7 @@
 IFS=$(echo -en "\n\b")
 
 all:
-	#$(CC) $(CFLAGS) -Wall -c chunk.c -o "$(MAKE_DIR)/chunk.o"
+	$(CC) $(CFLAGS) -Wall -c chunk.c -o "$(MAKE_DIR)/chunk.o"
 	$(CC) $(CFLAGS) -Wall -c chunk_manager.c -o "$(MAKE_DIR)/chunk_manager.o"
 
 test:
