Added fresh tests for parallel program and _probably_ improved insert into skiplist with same offset

--- a/dkopyrin/par_mapped_file/Makefile
+++ b/dkopyrin/par_mapped_file/Makefile
@@ -14,7 +14,7 @@ else
 CFLAGS += -Ofast -DNDEBUG -s -lpthread
 endif
 endif
-export CFLAGS MAKE_DIR
+export CFLAGS MAKE_DIR WEAK_DEBUG
 
 all: make_dir_init $(BUILDDIRS)
 	ar rcs "$(PWD)/out/libmappedfile.a" "$(PWD)/out"/*.o
