--- a/ikrotov/mapped_file/CMakeLists.txt
+++ b/ikrotov/mapped_file/CMakeLists.txt
@@ -3,7 +3,7 @@ project(mf)
 
 set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99")
 
-list (APPEND SOURCES ChunkManager.c mf_lib/mapped_file.c List/list.c hash-table/hash_table.c hash-table/hash_funcs.c)
+list (APPEND SOURCES ChunkManager.c mf_lib/mapped_file.c List/list.c hash_table/hash_table.c hash_table/hash_funcs.c)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
