increase size on chunk pool, hashtable, and chunk size

--- a/dokhlopkov/mapped_file/CMakeLists.txt
+++ b/dokhlopkov/mapped_file/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
 #for linkage by global tester
 add_library(mappedfile STATIC ${SOURCES})
 
-add_executable(tester test/test_simple.c)
-#add_executable(tester test/test_performance.c)
+#add_executable(tester test/test_simple.c)
+add_executable(tester test/test_performance.c)
+#add_executable(tester test/test1.c)
 target_link_libraries(tester mappedfile)
