Parallel mapped_file nbds cleanup

--- a/dkopyrin/par_mapped_file/nbds/Makefile
+++ b/dkopyrin/par_mapped_file/nbds/Makefile
@@ -1,5 +1,5 @@
 all:
-	$(CC) $(CFLAGS) -Wall -c -std=gnu99 -Iinclude runtime/runtime.c runtime/rcu.c runtime/lwt.c runtime/mem.c runtime/random.c datatype/nstring.c  map/map.c map/list.c map/skiplist.c map/hashtable.c
+	$(CC) $(CFLAGS) -Wall -c -std=gnu99 -Iinclude runtime/runtime.c runtime/rcu.c runtime/lwt.c runtime/mem.c runtime/random.c map/skiplist.c
 	mv *.o $(MAKE_DIR)/
 
 test:
