Move experimental code to main version

--- a/aneganov/mapped_file/libmf/Makefile
+++ b/aneganov/mapped_file/libmf/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.inc
 
 CFLAGS += -I../../../include
 LIBMF = libmf.a
-LIBOBJS = hashtable.o mf_malloc.o log.o chunk_manager.o mf_iterator.o mapped_file.o
+LIBOBJS = map.o mf_malloc.o log.o chunk_manager.o mf_iterator.o mapped_file.o skiplist.o
 
 ifeq (.depend,$(wildcard .depend))
 include .depend
