Fixed mapped file. Code refactoring. Decreased number of syscalls. Changed size of chunks. Documented chunk_manager (in chunk_manage.h). Improved performance. Added global map.

--- a/sabramov/mapped_file/Makefile
+++ b/sabramov/mapped_file/Makefile
@@ -3,6 +3,7 @@ DIR := mflib
 BUILD := $(DIR:%=build-%)
 CLEAN := $(DIR:%=clean-%)
 
+CFLAGS += -Ofast
 export CFLAGS MAKED
 
 all: build_all $(BUILD)
