Implemented mapped file multithread support and added multithread test

--- a/enikitenko/mapped_file/CMakeLists.txt
+++ b/enikitenko/mapped_file/CMakeLists.txt
@@ -1,27 +1,32 @@
-project (Logger)
+project (mapped_file)
 cmake_minimum_required (VERSION 2.8)
 
 set (WITH_LOGGER                  OFF  CACHE BOOL   "Enable logger")
 set (DEBUG_MODE                   OFF  CACHE BOOL   "Enable debug mode")
+set (MULTITHREADING               OFF  CACHE BOOL   "Enable multithreading support")
 
 if (DEBUG_MODE)
 	set (MMAP_PROTECTION          ON   CACHE BOOL   "Enable mmap protection")
 endif (DEBUG_MODE)
 
 list (APPEND SOURCES
-	mapped_file.c
-	hashtable.c)
+	${CMAKE_CURRENT_SOURCE_DIR}/mapped_file.c
+	${CMAKE_CURRENT_SOURCE_DIR}/hashtable.c)
 
 set (CMAKE_C_FLAGS "-Ofast")
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY out)
 
 if (WITH_LOGGER)
 	list (APPEND SOURCES
-		../logger/log.c
-		../logger/linux.c
-		../logger/not_demangle.c)
+		${CMAKE_CURRENT_SOURCE_DIR}/../logger/log.c
+		${CMAKE_CURRENT_SOURCE_DIR}/../logger/linux.c
+		${CMAKE_CURRENT_SOURCE_DIR}/../logger/not_demangle.c)
 	add_definitions (-DWITH_LOGGER)
 endif (WITH_LOGGER)
+
+if (MULTITHREADING)
+	add_definitions (-DMULTITHREADING)
+endif (MULTITHREADING)
 
 if (DEBUG_MODE)
 	add_definitions (-DDEBUG_MODE)
