Corrected problem with quotes in makefile

--- a/kiskakov/mapped_file/mflib/makefile
+++ b/kiskakov/mapped_file/mflib/makefile
@@ -1,6 +1,6 @@
 all:
 	$(CC) $(CFLAGS) -Wall -c  mapped_file.c -o "$(MAKED)/mapped_file.o"
-	$(CC) $(CFLAGS) -Wall -c  hash_table/hash_table.c -o "$(MAKED)/hash_table.o»
+	$(CC) $(CFLAGS) -Wall -c  hash_table/hash_table.c -o "$(MAKED)/hash_table.o"
 
 test:
 
