--- a/ikrotov/mapped_file/hash_table/Makefile
+++ b/ikrotov/mapped_file/hash_table/Makefile
@@ -1,5 +1,5 @@
 all:
-	$(CC) $(CFLAGS) -c hash_funcs.c -o "$(MAKE_DIR)/hash_funcs.o"
+	#$(CC) $(CFLAGS) -c hash_funcs.c -o "$(MAKE_DIR)/hash_funcs.o"
 	$(CC) $(CFLAGS) -c hash_table.c -o "$(MAKE_DIR)/hash_table.o"
 
 clean:
