delete old tests
These tests are only for non-parallel lib.

--- a/dokhlopkov/par_mapped_file/CMakeLists.txt
+++ b/dokhlopkov/par_mapped_file/CMakeLists.txt
@@ -19,6 +19,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out)
 add_library(mappedfile STATIC ${SOURCES})
 
 #add_executable(tester test/test_simple.c)
-add_executable(tester test/test_performance.c)
+#add_executable(tester test/test_performance.c)
 #add_executable(tester test/test1.c)
-target_link_libraries(tester mappedfile)
+#target_link_libraries(tester mappedfile)
