--- a/dokhlopkov/par_mapped_file/CMakeLists.txt
+++ b/dokhlopkov/par_mapped_file/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(mf)
 
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99 -pthread")
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -std=c99 -lpthread")
 
 list (APPEND SOURCES
         sources/mallocs.c
