Added initial multithreading supportD

--- a/aivanov/mapped_file/CMakeLists.txt
+++ b/aivanov/mapped_file/CMakeLists.txt
@@ -1,26 +1,39 @@
 cmake_minimum_required(VERSION 2.8)
 project (mapped_file)
 
-set (CMAKE_C_FLAGS "-DNDEBUG -Ofast")
-set (CMAKE_CXX_FLAGS "-DNDEBUG -Ofast")
-set (CMAKE_SHARED_LINKER_FLAGS "-DNDEBUG -Ofast")
+set(LOG OFF)
+set(REGION_PROTECTION OFF)
+set(MAPPED_FILE_MT ON)
+
+if (LOG)
+	add_definitions (-DLOG)
+endif (LOG)
+
+if (REGION_PROTECTION)
+	add_definitions (-DREGION_PROTECTION)
+endif (REGION_PROTECTION)
+
+if (MAPPED_FILE_MT)
+	add_definitions (-DMAPPED_FILE_MT)
+endif (MAPPED_FILE_MT)
+
+set(CMAKE_C_FLAGS "-DNDEBUG -Ofast")
+set(CMAKE_CXX_FLAGS "-DNDEBUG -Ofast")
+set(CMAKE_SHARED_LINKER_FLAGS "-DNDEBUG -Ofast")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror")
+
 include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "out")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "out")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "out")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror")
 
-add_subdirectory(log)
-
-#for linkage by global tester
-add_library(mappedfile STATIC FileRegion.cpp MappedFile.cpp mapped_file.cpp log/log.c log/logger.c)
+add_library(mappedfile STATIC
+	${CMAKE_CURRENT_SOURCE_DIR}/FileRegion.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/MappedFile.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/mapped_file.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/log/log.c
+	${CMAKE_CURRENT_SOURCE_DIR}/log/logger.c)
+	
 target_link_libraries(mappedfile pthread rt)
-
-add_executable(test1 test/test1.c log)
-target_link_libraries(test1 mappedfile pthread rt)
-
-add_executable(test2 test/test2.c log)
-target_link_libraries(test2 mappedfile pthread rt)
-
