--- a/dvodopian/mapped_file/mapped_file/CMakeLists.txt
+++ b/dvodopian/mapped_file/mapped_file/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(mapped_file)
+project(mappedfile)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
@@ -11,7 +11,6 @@ set(SOURCE_FILES mapped_file.c)
 
 
 add_library(mappedfile STATIC ${SOURCE_FILES} ${HEADER_FILES})
-###########
 
 include_directories("../key_set" "../sorted_list" "../chunk_manager")
 
