--- a/dvodopian/par_mapped_file/mapped_file/CMakeLists.txt
+++ b/dvodopian/par_mapped_file/mapped_file/CMakeLists.txt
@@ -10,4 +10,5 @@ set(SOURCE_FILES mapped_file.c)
 
 
 add_library(mappedfile STATIC ${SOURCE_FILES} ${HEADER_FILES})
+target_link_libraries(mappedfile pthread)
 set_target_properties(mappedfile PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out)
