skiplist and switching added

--- a/asnorkin/par_mapped_file/makefile
+++ b/asnorkin/par_mapped_file/makefile
@@ -1,5 +1,5 @@
 MAKE_DIR := $(PWD)/out
-DIRS := logger sorted_set dc_list hash_table mapped_file chunk_manager#tester
+DIRS := logger skiplist dc_list hash_table mapped_file chunk_manager#tester
 BUILDDIRS := $(DIRS:%=build-%)
 INSTALLDIRS := $(DIRS:%=install-%)
 CLEANDIRS := $(DIRS:%=clean-%)
